fix(upsell): Improve title alignment

--- a/assets/scss/_components/_upsell.scss
+++ b/assets/scss/_components/_upsell.scss
@@ -9,15 +9,24 @@
 	text-align: center;
 
 	@include element(icon) {
+		margin: 0;
 		display: block;
 		color: $color-primary;
-		margin: 0 0 20px;
 	}
 
 	@include element(title) {
+		margin: 20px 0;
 		color: $color-neutral-10;
 		font-weight: $font-weight-lg;
 		font-size: 24px;
 		line-height: 1.25;
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 }
